--- a/BookManagementSystem_MVC_14042024/Web.config
+++ b/BookManagementSystem_MVC_14042024/Web.config
@@ -21,6 +21,16 @@
   </appSettings>
   <system.web>
     <customErrors mode="On"></customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="/Account/Login" defaultUrl="/Book">
+      </forms>
+    </authentication>
+    <roleManager defaultProvider="AppRoleProvider" enabled="true">
+      <providers>
+        <clear/>
+        <add name="AppRoleProvider" type="BookManagementSystem_MVC_14042024.ApplicationRoleProvider"/>
+      </providers>
+    </roleManager>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
